<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_normal_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.wael.alameen.santaland.NormalLoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/just_hint"
        android:gravity="center"
        android:text="@string/santa_land_login"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="20dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_one"
        android:layout_below="@+id/just_hint"
        android:layout_marginTop="50dp"
        android:padding="10dp">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/full_name"
            android:hint="@string/enter_your_full_name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_two"
        android:padding="10dp"
        android:layout_below="@+id/input_one">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/age"
            android:inputType="number"
            android:hint="@string/enter_your_age"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        android:text="@string/select_your_gender"
        android:textSize="18sp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/input_two"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gender"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/text">

    </Spinner>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_four"
        android:padding="10dp"
        android:layout_below="@+id/gender">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_number"
            android:inputType="number"
            android:hint="@string/enter_your_phone_number"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/input_four"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:background="@color/colorAccent"/>

</RelativeLayout>
