<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_write_story"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wael.alameen.santaland.WriteStoryActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/welcome_title"
                    android:text="@string/share"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:gravity="center"/>

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_four"
        android:padding="10dp"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/bar">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_number"
            android:maxLength="2000"
            android:maxLines="100"
            android:maxHeight="2000dp"
            android:hint="@string/enter_your_story"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/upload"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/input_four"
        android:text="@string/upload"
        android:textColor="@color/white"
        android:background="@color/colorAccent"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/upload"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:background="@color/colorAccent"/>

</RelativeLayout>
