<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.wael.alameen.santaland.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/welcome_title"
                    android:text="@string/welcome"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:gravity="center"/>

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/app_icon"
        android:src="@drawable/red_logo"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/some_hint"
        android:text="@string/some_hint"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/app_icon"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_info"
        android:text="@string/info"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/some_hint"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_info"
        android:background="@color/colorAccent"
        android:padding="50dp"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/log_in"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:text="@string/log"
            android:layout_marginTop="10dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"/>

        <!--<com.facebook.login.widget.LoginButton-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/facebook_login"/>-->

    </RelativeLayout>

</RelativeLayout>

</ScrollView>